# Proyecto1EDD

./: CMakeLists.txt  README.md  build.sh
entrada/: items.csv
src/: globals.cpp  globals.h  main.cpp
src/clases/: Product.cpp  Product.h
src/export/: generarDot.cpp  generarDot.h  listarInorderAvl.cpp  listarInorderAvl.h
src/helperMethods/: helperMethods.cpp  helperMethods.h  valorOrdenAZ.cpp  valorOrdenarAZ.h
src/logger/: logger.cpp  logger.h
src/parsing/: csvReader.cpp  csvReader.h  loader.cpp  loader.h
src/tads/: ArbolAVL.cpp  ArbolAVL.h  ArbolB.cpp  ArbolB.h  Lista.cpp  Lista.h  NodoAVL.cpp  NodoAVL.h  NodoB.cpp  NodoB.h  NodoLista.cpp  NodoLista.h
